manifests/applications/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr-prod-media-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy: {}
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
        readOnlyRootFilesystem: true
      automountServiceAccountToken: false
      containers:
      - securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        image: ghcr.io/csbdc/sonarr:main
        name: sonarr
        livenessProbe:
          httpGet:
            path: /ping
            port: 8989
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 8989
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
          - containerPort: 8989
            name: http
            protocol: TCP
        resources: {}
        volumeMounts:
        - name: app-data
          mountPath: /config
        - name: media-data
          mountPath: /tv
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: app-data
        persistentVolumeClaim:
          claimName: sonarr-prod-media-pvc
      - name: media-data
        nfs:
          server: 192.168.10.197
          path: /srv/nfs/tv
      - name: downloads
        nfs:
          server: 192.168.10.197
          path: /srv/nfs/downloads
